# HKUSTGZ-24UG-UFUG2601-CPP-Project

./: .gitignore  CMakeLists.txt  README.md  a  calculator.cpp  calculator.hpp  in  in1  lab.py  main.cpp  minSQL_process.cpp  minSQL_struct.cpp  minSQL_struct.hpp  miniSQL project.md  out  test.cpp
database/: db_university
src/: minSQL_struct.hpp
